// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store actionCreators should export actionCreators 1`] = `
Object {
  "type": "[App] DONE LOADING",
}
`;

exports[`store actionCreators should export actionCreators 2`] = `
Object {
  "type": "[App] START LOADING",
}
`;

exports[`store actions should export action types 1`] = `"[App] START LOADING"`;

exports[`store actions should export action types 2`] = `"[App] DONE LOADING"`;
